# framebuffer

./: configure.ac
packaging/: fbdev_simple.spec
src/: Makefile.am  fbdev_simple.c
